WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35309
WebCore should stop throwing away the CGImageSourceRef on Windows to improve GIF performance
https://bugs.webkit.org/show_bug.cgi?id=35309
Summary
WebCore should stop throwing away the CGImageSourceRef on Windows to improve ...
Steve Falkenburg
Reported
2010-02-23 11:49:54 PST
WebCore should stop throwing away the CGImageSourceRef on Windows to improve GIF performance
Attachments
Patch
(1.44 KB, patch)
2010-02-23 11:54 PST
,
Steve Falkenburg
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Falkenburg
Comment 1
2010-02-23 11:54:07 PST
Created
attachment 49314
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-02-23 11:56:27 PST
Comment on
attachment 49314
[details]
Patch r=me
Steve Falkenburg
Comment 3
2010-02-23 12:11:51 PST
Committed
r55162
: <
http://trac.webkit.org/changeset/55162
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug