2010-02-23  Steve Falkenburg  <sfalken@apple.com>

Reviewed by Adam Roben.

        WebCore should stop throwing away the CGImageSourceRef on Windows to improve GIF performance
        https://bugs.webkit.org/show_bug.cgi?id=35309

        * platform/graphics/cg/ImageSourceCG.cpp:
        (WebCore::ImageSource::clear):


Canonical link: https://commits.webkit.org/46464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55162 268f45cc-cd09-0410-ab3c-d52691b4dbfc